Merged revisions 1211228 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r1211228 | dkulp | 2011-12-06 18:41:51 -0500 (Tue, 06 Dec 2011) | 1 line
  
  Fix compile failure on Java5
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.4.x-fixes@1211238 13f79535-47bb-0310-9956-ffa450edef68